--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -13918,7 +13918,7 @@
             "order": 124,
             "name": "ㄴ0.25초 짧은 딜레이 반복",
             "created_at": "2024-12-19T18:54:30.254977",
-            "updated_at": "2025-01-16T14:09:51.861098",
+            "updated_at": "2025-01-22T14:21:05.740545",
             "trigger_key": null,
             "repeat_count": 10,
             "is_nested": true,
@@ -13928,6 +13928,20 @@
                     "display_text": "지연시간 : 0.025초",
                     "duration": 0.025,
                     "order": 1
+                },
+                {
+                    "type": "undefined_type",
+                    "logic_name": "엔터 --- 누르기",
+                    "display_text": "정의되지 않은 로직: 엔터 --- 누르기",
+                    "repeat_count": 1,
+                    "order": 2
+                },
+                {
+                    "type": "undefined_type",
+                    "logic_name": "엔터 --- 떼기",
+                    "display_text": "정의되지 않은 로직: 엔터 --- 떼기",
+                    "repeat_count": 1,
+                    "order": 3
                 }
             ]
         },
