--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -13918,7 +13918,7 @@
             "order": 124,
             "name": "ㄴ0.25초 짧은 딜레이 반복",
             "created_at": "2024-12-19T18:54:30.254977",
-            "updated_at": "2025-01-22T14:21:05.740545",
+            "updated_at": "2025-01-23T20:17:31.766598",
             "trigger_key": null,
             "repeat_count": 10,
             "is_nested": true,
@@ -13931,17 +13931,31 @@
                 },
                 {
                     "type": "undefined_type",
-                    "logic_name": "엔터 --- 누르기",
-                    "display_text": "정의되지 않은 로직: 엔터 --- 누르기",
+                    "logic_name": "정의되지 않은 로직: 엔터 --- 누르기",
+                    "display_text": "정의되지 않은 로직: 정의되지 않은 로직: 엔터 --- 누르기",
                     "repeat_count": 1,
                     "order": 2
                 },
                 {
                     "type": "undefined_type",
-                    "logic_name": "엔터 --- 떼기",
-                    "display_text": "정의되지 않은 로직: 엔터 --- 떼기",
+                    "logic_name": "정의되지 않은 로직: 엔터 --- 떼기",
+                    "display_text": "정의되지 않은 로직: 정의되지 않은 로직: 엔터 --- 떼기",
                     "repeat_count": 1,
                     "order": 3
+                },
+                {
+                    "type": "undefined_type",
+                    "logic_name": "Space --- 누르기",
+                    "display_text": "정의되지 않은 로직: Space --- 누르기",
+                    "repeat_count": 1,
+                    "order": 4
+                },
+                {
+                    "type": "undefined_type",
+                    "logic_name": "Space --- 떼기",
+                    "display_text": "정의되지 않은 로직: Space --- 떼기",
+                    "repeat_count": 1,
+                    "order": 5
                 }
             ]
         },
