--- a/BE/settings/setting files/settings.json
+++ b/BE/settings/setting files/settings.json
@@ -13963,7 +13963,7 @@
             "order": 125,
             "name": "---------------지연시간---------------",
             "created_at": "2024-12-08T13:40:39.094231",
-            "updated_at": "2025-01-06T13:23:18.381638",
+            "updated_at": "2025-01-26T14:03:06.646186",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
@@ -13977,6 +13977,26 @@
                     "scan_code": 71,
                     "virtual_key": 103,
                     "modifiers_key_flag": 0
+                },
+                {
+                    "order": 2,
+                    "logic_detail_item_dp_text": "오른쪽 Shift + 세미콜론(;)  ((메인키)) --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "세미콜론(;)",
+                    "scan_code": 39,
+                    "virtual_key": 186,
+                    "modifiers_key_flag": 32
+                },
+                {
+                    "order": 3,
+                    "logic_detail_item_dp_text": "오른쪽 Shift + 세미콜론(;)  ((메인키)) --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "세미콜론(;)",
+                    "scan_code": 39,
+                    "virtual_key": 186,
+                    "modifiers_key_flag": 32
                 }
             ]
         }
